--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -1,16 +1,18 @@
-name: Wakatime Readme
+name: Update README
 
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 12am UTC
-    - cron: "0 0 * * *"
+    - cron: "0 */6 * * *"
 
 jobs:
   update-readme:
-    name: Update this repo's README
+    name: Update README
     runs-on: ubuntu-latest
     steps:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          SHOW_TITLE: true
+          TIME_RANGE: last_30_days
+          SHOW_TOTAL: true
